internal/gatewayapi/testdata/envoyproxy-for-gatewayclass.out.yaml
envoyProxiesForGateways:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    name: valid
    namespace: envoy-gateway
  spec:
    logging: {}
    telemetry:
      accessLog:
        settings:
        - format:
            text: |
              [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
            type: Text
          sinks:
          - file:
              path: /dev/stdout
            type: File
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: ep-from-gtw
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: EnvoyProxy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    name: invalid
    namespace: envoy-gateway
  spec:
    logging: {}
    telemetry:
      accessLog:
        settings:
        - format:
            text: |
              [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
            type: Text
          sinks:
          - type: File
          - type: ALS
          - type: OpenTelemetry
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: GatewayClass
        name: envoy-gateway-class
      conditions:
      - lastTransitionTime: null
        message: '[unable to configure access log when using File sink type but "file"
          field being empty, unable to configure access log when using OpenTelemetry
          sink type but "openTelemetry" field being empty]'
        reason: InvalidParameters
        status: "False"
        type: Accepted
gatewayClass:
  apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    name: envoy-gateway-class
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: invalid
      namespace: envoy-gateway-system
  status:
    conditions:
    - lastTransitionTime: null
      message: 'Invalid parametersRef: [unable to configure access log when using
        File sink type but "file" field being empty, unable to configure access log
        when using OpenTelemetry sink type but "openTelemetry" field being empty]'
      reason: InvalidParameters
      status: "False"
      type: Accepted
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: ep-from-gtw
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    infrastructure:
      parametersRef:
        group: gateway.envoyproxy.io
        kind: EnvoyProxy
        name: valid
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: ep-from-gc
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
  status:
    conditions:
    - lastTransitionTime: null
      message: 'Invalid parametersRef:: [unable to configure access log when using
        File sink type but "file" field being empty, unable to configure access log
        when using OpenTelemetry sink type but "openTelemetry" field being empty]'
      reason: InvalidParameters
      status: "False"
      type: Accepted
infraIR:
  envoy-gateway/ep-from-gc:
    proxy:
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: ep-from-gc
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/ep-from-gc
      namespace: envoy-gateway-system
  envoy-gateway/ep-from-gtw:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: valid
          namespace: envoy-gateway
        spec:
          logging: {}
          telemetry:
            accessLog:
              settings:
              - format:
                  text: |
                    [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
                  type: Text
                sinks:
                - file:
                    path: /dev/stdout
                  type: File
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: Gateway
              name: ep-from-gtw
              namespace: envoy-gateway
            conditions:
            - lastTransitionTime: null
              message: EnvoyProxy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
      listeners:
      - name: envoy-gateway/ep-from-gtw/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: ep-from-gtw
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/ep-from-gtw
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/ep-from-gc: {}
  envoy-gateway/ep-from-gtw:
    accessLog:
      text:
      - format: |
          [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"\n
        path: /dev/stdout
    backends:
    - metadata:
        kind: Service
        name: envoy-envoy-gateway-ep-from-gtw-90cb3c57
        namespace: envoy-gateway-system
        sectionName: "8080"
      name: envoy-gateway/ep-from-gtw
      settings:
      - addressType: IP
        endpoints:
        - host: 7.6.5.4
          port: 8080
          zone: zone1
        metadata:
          kind: Service
          name: envoy-envoy-gateway-ep-from-gtw-90cb3c57
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/ep-from-gtw
        protocol: TCP
    globalResources:
      proxyServiceCluster:
        backendClusterRefs:
        - name: envoy-gateway/ep-from-gtw
        metadata:
          kind: Service
          name: envoy-envoy-gateway-ep-from-gtw-90cb3c57
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/ep-from-gtw
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: ep-from-gtw
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/ep-from-gtw/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
